gitops/minio/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: "docker.io/minio/minio:RELEASE.2021-10-27T16-29-42Z"
          args: ['server', '/data', '--console-address', ':9001']
          ports:
            - name: minio
              containerPort: 9000
          volumeMounts:
            - name: minio-volume
              mountPath: /data
      volumes:
        - name: minio-volume
          persistentVolumeClaim:
            claimName: minio-pvc
